--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
-
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>NOVA · Welcome</title>
-<link rel="stylesheet" href="assets/css/style.css"/></head><body>
-<div class="wrap">
-  <div class="hero card">
-    <div>
-      <div class="kicker">Welcome to Nova</div>
-      <h1 class="big">I'll help you discover<br/>why you're here.</h1>
-      <div class="stat">89% of people say they’re searching for purpose.</div>
-      <p>Nova doesn’t guess your purpose; it <b>surfaces what your life has already been saying</b>. We look at your human attributes—mind, heart, drive, and spirit—and map them to work that fits.</p>
-      <div style="margin-top:12px"><button class="btn" onclick="location.href='categories.html'">Start My Journey</button></div>
-    </div>
-    <div class="card">
-      <h2>What to expect</h2>
-      <p class="small"><b>1) Categories:</b> Focus the conversation to areas that reflect your world.</p>
-      <p class="small"><b>2) Traits:</b> Select signals you’ve actually shown—your attributes in motion.</p>
-      <p class="small"><b>3) Role Reveal:</b> See a role pattern built from your traits and attribute domains.</p>
-      <hr/><span class="badge">No tests. No pressure. Just clarity.</span>
-    </div>
-  </div>
-</div>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>NOVA · Welcome</title><link rel="stylesheet" href="assets/css/style.css"/></head><body>
+<div id="guided" class="overlay"><div class="panel"><div class="kicker">Before You Begin</div>
+<h1>Nova — Discover Purpose. Live It Boldly.</h1>
+<p class="small">Nova is a guided experience — not a test or survey. Set aside <b>10–15 minutes</b> to move through each step.</p>
+<div class="checkrow"><input id="ready" type="checkbox"/><label for="ready" class="small">I'm ready to focus for the next 10 minutes.</label></div>
+<button id="begin" class="btn" disabled>Begin My Journey →</button></div></div>
+<div class="wrap" id="welcome" style="opacity:.0;transition:opacity .6s ease"><div class="hero card"><div>
+<div class="kicker">Welcome to Nova</div><h1 class="big">I'll help you discover<br/>why you're here.</h1>
+<div class="small">Nova — Discover Purpose. Live It Boldly.</div>
+<p class="small" style="margin-top:8px">We look at your human attributes—mind, heart, drive, and spirit—and map them to work that fits.</p>
+<div style="margin-top:12px"><button class="btn" onclick="location.href='categories.html'">Start My Journey</button></div></div>
+<div class="card"><h2>What to expect</h2><p class="small"><b>1)</b> Categories</p><p class="small"><b>2)</b> Traits</p><p class="small"><b>3)</b> Role Reveal</p><hr/><span class="badge">No tests. No pressure. Just clarity.</span></div>
+</div><footer>Nova v9.4c — Discover Purpose. Live It Boldly.</footer></div>
+<script type="module">import { set } from './assets/js/shared.js'; const r=document.getElementById('ready'); const b=document.getElementById('begin'); r.addEventListener('change',()=>b.disabled=!r.checked); b.addEventListener('click',()=>{ set('journeyStartTime', Date.now()); document.getElementById('guided').style.display='none'; document.getElementById('welcome').style.opacity=1; });</script>
 </body></html>
