--- a/invest.html
+++ b/invest.html
@@ -1,59 +1,11 @@
-
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>NOVA · Invest in Yourself</title>
-<link rel="stylesheet" href="assets/css/style.css"/></head><body>
-<div class="wrap">
-  <h1>Invest in Yourself — Because Purpose Deserves Momentum</h1>
-  <div class="card">
-    <p class="small">You’ve seen your purpose and reflected on the change you need. Now give that clarity direction. <b>Nova + Navi</b> offer three levels of guided support — choose the step that matches where you are.</p>
-  </div>
-  <div class="pricing">
-    <div class="tier">
-      <h2>Starter</h2>
-      <div class="price">$29.99 / month</div>
-      <ul class="small">
-        <li>Nova discovery + Role Reveal</li>
-        <li>Basic résumé builder & job suggestions</li>
-        <li>Weekly “next step” prompts</li>
-      </ul>
-      <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Starter</a>
-    </div>
-    <div class="tier">
-      <h2>Pro</h2>
-      <div class="price">$99 / month</div>
-      <ul class="small">
-        <li>Everything in Starter</li>
-        <li>AI résumé rewrite & role tailoring</li>
-        <li>Company insights & search filters</li>
-      </ul>
-      <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Pro</a>
-    </div>
-    <div class="tier">
-      <h2>Mastery</h2>
-      <div class="price">$149 / month</div>
-      <ul class="small">
-        <li>Everything in Pro</li>
-        <li>1:1 coaching + career roadmap PDF</li>
-        <li>Quarterly masterclass & accountability</li>
-      </ul>
-      <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Mastery</a>
-    </div>
-  
-  <div class="card" style="margin-top:14px">
-    <h2>The Purpose Book (One‑Time)</h2>
-    <p class="small">A concise field guide to live out what Nova revealed. Includes a 30‑day prompt journal, reflection pages, and practical exercises to move from clarity to action.</p>
-    <ul class="small">
-      <li>30 days of guided prompts</li>
-      <li>Weekly check‑ins & reflection templates</li>
-      <li>Examples and stories to build confidence</li>
-    </ul>
-    <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Get the Purpose Book</a>
-  </div>
-
-  <div class="bar">
-    <a class="btn" href="reflection.html">← Back to Reflection</a>
-    <a class="btn" href="index.html">Return to Nova Home</a>
-  </div>
-</div>
-</body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>NOVA · Invest in Yourself</title><link rel="stylesheet" href="assets/css/style.css"/></head><body><div class="wrap">
+<h1>Invest in Yourself — Because Purpose Deserves Momentum</h1><div class="small">Nova — Discover Purpose. Live It Boldly.</div>
+<div class="card"><p class="small">You’ve seen your purpose and reflected on the change you need. Now give that clarity direction. <b>Nova + Navi</b> offer levels of support — choose the step that matches where you are.</p></div>
+<div class="pricing">
+<div class="tier"><h2>Starter</h2><div class="price">$29.99 / month</div><ul class="small"><li>Nova discovery + Role Reveal</li><li>Basic résumé builder & job suggestions</li><li>Weekly “next step” prompts</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Starter</a></div>
+<div class="tier"><h2>Pro</h2><div class="price">$99 / month</div><ul class="small"><li>Everything in Starter</li><li>AI résumé rewrite & role tailoring</li><li>Company insights & search filters</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Pro</a></div>
+<div class="tier"><h2>Mastery</h2><div class="price">$149 / month</div><ul class="small"><li>Everything in Pro</li><li>1:1 coaching + career roadmap PDF</li><li>Quarterly masterclass & accountability</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Mastery</a></div>
+<div class="tier"><h2>Purpose Book</h2><div class="price">One-Time</div><ul class="small"><li>30-day guided prompts</li><li>Weekly check-ins & templates</li><li>Practical steps to build momentum</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Get the Purpose Book</a></div>
+</div><footer>Nova v9.4c — Discover Purpose. Live It Boldly.</footer></div>
+<script>console.log("Nova v9.4c | Purpose Meets Outlook | Guided Start + Navi Bridge");</script></body></html>
