--- a/traits.html
+++ b/traits.html
@@ -1,71 +1,11 @@
-
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>NOVA · Select Your Traits</title>
-<link rel="stylesheet" href="assets/css/style.css"/></head><body>
-<div class="wrap">
-  <div id="dbg" class="debug" style="display:none"></div>
-  <h1>Select Your Traits</h1>
-  <p>Why this matters: <b>Traits are the receipts of your life</b>—clues you’ve shown again and again. When we group them, your direction emerges.</p>
-  <div class="card">
-    <p class="small"><b>How to choose:</b> Tap traits you have actually demonstrated. Select up to <b>12</b>.</p>
-    <p id="catLine" class="small" style="margin-top:6px"></p>
-    <p id="attrHint" class="small"></p>
-  </div>
-  <div id="grid" class="grid" role="list"></div>
-  <div id="errorCard" class="card" style="display:none"></div>
-  <div class="bar"><div class="small" id="cap">0 / 12 selected</div><div><a class="btn" href="categories.html">Back</a><button id="next" class="btn" disabled>Next: Role Reveal</button></div></div>
-</div>
-
-<script id="embedded-categories" type="application/json">{"Business": ["Analytical", "Strategic", "Planner", "Organizer", "Documentation", "Decision-Making", "Process Improvement", "Results-Driven", "Presentation", "Writing", "Market Awareness", "Customer-Focused", "Relationship-Building", "Numerical Reasoning", "Data-Driven"], "Technology": ["Systems Thinking", "Problem-Solving", "Troubleshooting", "Security-Minded", "Data-Driven", "Creative", "Documentation", "Logical", "Pattern Recognition", "Research", "Detail-Oriented", "Presentation"], "Education & Community": ["Teaching", "Mentoring", "Communicator", "Listener", "Empathetic", "Encouraging", "Community-Minded", "Service-Driven", "Writing", "Presentation", "Organizer"], "Public Safety": ["Calm Under Pressure", "Ethical", "Accountable", "Safety-First", "Security-Minded", "Detail-Oriented", "Courageous", "Reliable", "Documentation"], "Healthcare": ["Compassionate", "Patient", "Ethical", "Team-Oriented", "Reliable", "Documentation", "Calm Under Pressure", "Service-Driven", "Detail-Oriented"], "Science & Research": ["Research", "Pattern Recognition", "Analytical", "Documentation", "Systems Thinking", "Logical", "Problem-Solving"], "Skilled Trades": ["Hands-On", "Mechanical Aptitude", "Spatial Reasoning", "Tool Proficiency", "Quality Focus", "Safety-First", "Stamina", "Coordinated", "Reliable"], "Finance & Accounting": ["Numerical Reasoning", "Analytical", "Detail-Oriented", "Integrity", "Accountable", "Documentation", "Planner", "Disciplined", "Data-Driven"], "Operations & Logistics": ["Organizer", "Scheduling", "Vendor Management", "Process Improvement", "Reliable", "Team-Oriented", "Detail-Oriented", "Results-Driven"], "Sales & Marketing": ["Persuasive", "Communicator", "Relationship-Building", "Presentation", "Market Awareness", "Optimistic", "Customer-Focused", "Creative"], "Law & Government": ["Ethical", "Integrity", "Documentation", "Communicator", "Analytical", "Diplomatic", "Public Speaking", "Accountable"], "Arts & Media": ["Creative", "Design Sense", "Writing", "Presentation", "Communicator", "Optimistic"], "Essential & Everyday Workers": ["Reliable", "Dependable", "Service-Driven", "Customer-Focused", "Team-Oriented", "Organizer", "Hands-On", "Safety-First", "Quality Focus", "Accountable", "Community-Minded", "Patient", "Encouraging"]}</script>
-
-<script type="module">
-  import { readJSON, get, set, byAlpha, dedupe, caseKey } from './assets/js/shared.js';
-  const MAX = 12; const cats = get('selectedCategories', []);
-  const dbg = document.getElementById('dbg');
-  function log(msg){ dbg.style.display='block'; dbg.textContent = msg; }
-  if (!cats || !cats.length) { location.href='categories.html'; }
-
-  document.getElementById('catLine').textContent = `From categories: ${cats.join(', ')}`;
-  const selected = new Set(get('selectedTraits', []));
-
-  function showError(msg) { const ec=document.getElementById('errorCard'); ec.style.display='block'; ec.innerHTML = `<b>Data didn’t load.</b><br/><span class="small">${msg}</span>`; }
-  function updateUI(){ document.getElementById('cap').textContent = `${selected.size} / ${MAX} selected`; document.getElementById('next').disabled = selected.size===0; set('selectedTraits',[...selected]); }
-  function render(list){ const grid=document.getElementById('grid'); grid.innerHTML=''; list.forEach(trait=>{ const el=document.createElement('div'); el.className='pill'; el.textContent=trait; if(selected.has(trait)) el.classList.add('selected'); el.addEventListener('click',()=>{ if(selected.has(trait)){selected.delete(trait); el.classList.remove('selected');} else if(selected.size<MAX){selected.add(trait); el.classList.add('selected');} updateUI(); }); grid.appendChild(el); }); updateUI(); }
-
-  function pickFromMap(map) {
-    const keyMap = Object.fromEntries(Object.keys(map||{}).map(k=>[caseKey(k), map[k]]));
-    const bag=[];
-    cats.forEach(c=>{ const arr = keyMap[caseKey(c)] || []; bag.push(...arr); });
-    return dedupe(bag).sort(byAlpha);
-  }
-
-  // Embedded → ./data → /data → /data/nova_brain_map_v1.json
-  try {
-    const emb = JSON.parse(document.getElementById('embedded-categories').textContent||'{}');
-    const list = pickFromMap(emb);
-    if (list.length) { log('Loaded from embedded data'); render(list); }
-    else throw new Error('Embedded data returned 0 traits');
-  } catch(e) {
-    readJSON('./data/traits_with_categories.json').then(map=>{
-      const list = pickFromMap(map);
-      if (list.length) { log('Loaded from ./data/traits_with_categories.json'); render(list); }
-      else throw new Error('No traits from ./data');
-    }).catch(e1=>{
-      readJSON('/data/traits_with_categories.json').then(map=>{
-        const list = pickFromMap(map);
-        if (list.length) { log('Loaded from /data/traits_with_categories.json'); render(list); }
-        else throw new Error('No traits from /data absolute');
-      }).catch(e2=>{
-        readJSON('/data/nova_brain_map_v1.json').then(bm=>{
-          const list = pickFromMap(bm.categories||{});
-          if (list.length) { log('Loaded from /data/nova_brain_map_v1.json'); render(list); }
-          else { showError('No traits found for your categories.'); }
-        }).catch(e3=>{ console.error(e3); showError('Please confirm data files are deployed in /data.'); });
-      });
-    });
-  }
-
-  document.getElementById('next').addEventListener('click',()=>location.href='role.html');
-</script>
-</body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>NOVA · Select Your Traits</title><link rel="stylesheet" href="assets/css/style.css"/></head><body><div class="wrap">
+<h1>Select Your Traits</h1><div class="card"><p class="small">Tap traits you’ve actually shown. Up to <b>12</b>.</p><p id="catLine" class="small"></p></div>
+<div id="grid" class="grid"></div>
+<div class="bar"><div class="small" id="cap">0 / 12 selected</div><div><a class="btn" href="categories.html">Back</a><button id="next" class="btn" disabled>Next: Role Reveal</button></div></div></div>
+<script type="module">import {{ get, set, dedupe, byAlpha, caseKey }} from './assets/js/shared.js'; const MAX=12; const cats=get('selectedCategories',[]); if(!cats||!cats.length) location.href='categories.html'; document.getElementById('catLine').textContent=`From categories: ${cats.join(', ')}`;
+const map = await (await fetch('/data/traits_with_categories.json',{cache:'no-store'})).json(); const key=Object.fromEntries(Object.keys(map).map(k=>[k.toLowerCase(), map[k]])); const bag=[]; cats.forEach(c=>bag.push(...(key[(c||'').toLowerCase()]||[]))); const list=[...new Set(bag)].sort(byAlpha);
+const selected=new Set(get('selectedTraits',[]));
+function update(){{ document.getElementById('cap').textContent=`${{selected.size}} / ${MAX} selected`; document.getElementById('next').disabled=selected.size===0; set('selectedTraits',[...selected]); }}
+function render(){{ const grid=document.getElementById('grid'); grid.innerHTML=''; list.forEach(t=>{{ const el=document.createElement('div'); el.className='pill'; el.textContent=t; if(selected.has(t)) el.classList.add('selected'); el.addEventListener('click',()=>{{ if(selected.has(t)){{selected.delete(t); el.classList.remove('selected');}} else if(selected.size<MAX){{selected.add(t); el.classList.add('selected');}} update(); }}); grid.appendChild(el); }}); update(); }}
+render(); document.getElementById('next').addEventListener('click',()=>location.href='role.html');</script></body></html>
