--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>NOVA · Welcome</title>
-<link rel="stylesheet" href="assets/css/style.css"/></head>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nova — Welcome</title>
+<style>
+body{margin:0;padding:0;background:#0b1524;color:#fff;font-family:sans-serif;display:flex;justify-content:center;align-items:center;min-height:100vh;text-align:left;}
+.container{max-width:900px;padding:40px;}
+h1{font-size:2.5em;margin-bottom:0.2em;}
+p{font-size:1.2em;line-height:1.6;}
+strong{color:#1fbf6b;}
+.btn{display:inline-block;margin-top:1.4em;padding:12px 20px;background:#1fbf6b;color:#071c16;font-weight:700;text-decoration:none;border-radius:8px;}
+.btn:hover{background:#18a05c;}
+footer{opacity:.7;margin-top:3em;font-size:0.9em;}
+</style>
+</head>
 <body>
-<div class="wrap" id="welcome">
-  <div class="hero card">
-    <div>
-      <div class="kicker">WELCOME TO NOVA</div>
-      <h1 class="big">I'll help you discover<br/>why you're here.</h1>
-      <div class="small" style="font-weight:700;margin:6px 0">89% of people say they’re searching for purpose.</div>
-      <p class="small">Nova doesn’t guess your purpose; it surfaces what your life has already been saying. We look at your human attributes—mind, heart, drive, and spirit—and map them to work that fits.</p>
-      <div style="margin-top:12px"><button class="btn" onclick="location.href='categories.html'">Start My Journey</button></div>
-    </div>
-    <div class="card">
-      <h2>What to expect</h2>
-      <p class="small"><b>1) Categories:</b> Focus the conversation to areas that reflect your world.</p>
-      <p class="small"><b>2) Traits:</b> Select signals you’ve actually shown—your attributes in motion.</p>
-      <p class="small"><b>3) Role Reveal:</b> See a role pattern built from your traits and attribute domains.</p>
-      <hr/><span class="badge">No tests. No pressure. Just clarity.</span>
-      <p class="notice">Estimated time: 10–15 minutes.</p>
-    </div>
-  </div>
-  <footer>Nova v9.4d — Discover Purpose. Live It Boldly.</footer>
+<div class="container">
+  <h1>I'll help you discover why you're here.</h1>
+  <p><strong>89% of people do not know their purpose.</strong></p>
+  <p>Nova doesn't guess your purpose; it surfaces what your life has already been saying. We look at your human attributes—mind, heart, drive, and spirit—and map them to work that fits.</p>
+  <a href="categories.html" class="btn">Start My Journey</a>
+  <footer>Nova v9.4e — Discover Purpose. Live It Boldly.</footer>
 </div>
-<script>console.log("Nova v9.4d | Purpose Meets Outlook | Guided Start + Navi Bridge");</script>
-</body></html>
+<script>console.log("Nova v9.4e | Fact locked: 89% of people do not know their purpose.");</script>
+</body>
+</html>
